[workspace]
resolver = "2"
members = [
    "cli",
    "lib",
]

[workspace.package]
homepage = "https://usage.jdx.dev"
documentation = "https://usage.jdx.dev"
repository = "https://github.com/jdx/usage"
authors = ["Jeff Dickey @jdx"]
license = "MIT"

[workspace.dependencies]
usage-cli = { path = "./cli" }
usage-lib = { path = "./lib", version = "0.6.0", features = ["clap"] }

[workspace.metadata.release]
allow-branch = ["main"]
