[workspace]
resolver = "2"
members = [
    "clap_usage",
    "cli",
    "lib",
]

[workspace.package]
homepage = "https://usage.jdx.dev"
documentation = "https://usage.jdx.dev"
repository = "https://github.com/jdx/usage"
authors = ["Jeff Dickey @jdx"]
license = "MIT"

[workspace.dependencies]
clap_usage = { path = "./clap_usage", version = "2.0.3" }
usage-cli = { path = "./cli" }
usage-lib = { path = "./lib", version = "2.0.4", features = ["clap"] }

[workspace.metadata.release]
allow-branch = ["main"]
