[package]
name = "usage-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Dickey @jdx"]
description = "Helper for CLIs which follow the Usage spec"

[[bin]]
name = "usage"
path = "src/main.rs"

[lib]
name = "usage_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
contracts = "0.6.3"
env_logger = "0.11"
indexmap = "2.1.0"
exec = "0.3.1"
itertools = "0.12.0"
kdl = "4"
log = "0.4"
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
regex = "1"
strum = { version = "0.26", features = ["derive"] }
tera = "1.19.1"
thiserror = "1"
usage-lib = { path = "..", features=["clap"] }
xx = "0.2"
serde = { version = "1.0.195", features = ["derive"] }
