[package]
name = "usage-cli"
version = "0.1.4"
edition = "2021"
authors = ["Jeff Dickey @jdx"]
description = "Helper for CLIs which follow the Usage spec"
license = "MIT"
documentation = "https://docs.rs/usage-lib"
homepage = "https://usage.jdx.dev"
repository = "https://github.com/jdx/usage"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/src/**/*.rs",
]

[[bin]]
name = "usage"
path = "src/main.rs"

[lib]
name = "usage_cli"
path = "src/lib.rs"

[dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive", "string"] }
contracts = "0.6"
env_logger = "0.11"
exec = "0.3"
heck = "0.4"
indexmap = "2"
itertools = "0.12"
kdl = "4"
log = "0.4"
miette = { version = "5", features = ["fancy"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tera = "1"
thiserror = "1"
usage-lib = { version = "0.1", features = ["clap"] }
xx = "0.2"

[dev-dependencies]
assert_cmd = { version = "2", features = ["color-auto"] }
ctor = "0.2"
predicates = "3"
