[package]
name = "usage-cli"
edition = "2021"
version = "2.0.4"
description = "CLI for working with usage-based CLIs"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/src/**/*.rs",
    "/assets/**/*",
]

[[bin]]
name = "usage"
path = "src/main.rs"

[lib]
name = "usage_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string", "env"] }
clap_usage = { workspace = true }
env_logger = "0.11"
exec = "0.3"
indexmap = "2"
itertools = "0.14"
kdl = "6"
log = "0.4"
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
tera = "1"
thiserror = "2"
usage-lib = { workspace = true, features = ["clap", "docs"] }
xx = "2"

[dev-dependencies]
assert_cmd = { version = "2", features = ["color-auto"] }
ctor = "0.2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/usage-{target}{ archive-suffix }"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/usage-universal-apple-darwin{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/usage-universal-apple-darwin{ archive-suffix }"

[package.metadata.release]
shared-version = true
release = true
