[package]
name = "usage-lib"
edition = "2021"
version = "2.0.4"
rust-version = "1.70.0"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/src/**/*.rs",
    "/src/**/*.tera",
    "/bash-completion/bash_completion",
]
description = "Library for working with usage specs"
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "usage"

[dependencies]
clap = { version = "4", features = ["derive", "string"], optional = true }
heck = "0.5"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
kdl = "6"
log = "0.4"
miette = "7"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
strum = { version = "0.26", features = ["derive"] }
tera = { version = "1", optional = true }
thiserror = "2"
versions = "6"
xx = "2"

[features]
default = ["docs"]
docs = ["tera"]

[dev-dependencies]
ctor = "0.2"
insta = "1"
pretty_assertions = "1"
shell-words = "1"

[package.metadata.release]
shared-version = true
release = true
